# agent_project

./: .gitignore  README.md  docker-compose.milvus.yml
backend/: .env.example  api.md  main.py  pyproject.toml
backend/app/agent/: agent.py  agent_middleware.py  agent_tools.py  token_utils.py
backend/app/config/: chroma.yaml  milvus.yaml  rag.yaml
backend/app/core/: logger_handler.py  rate_limit.py
backend/eval/: calibrate.py  config.py  judge_model.py  metrics.py  report.py  rerank_healthcheck.py  runner.py  schema.py  seed_corpus.py  system_under_test.py  threshold_sweep.py
backend/scripts/: spike_astream_shape.py  verify_milvus.py
backend/tests/: conftest.py  test_agent_rag_generation_mode.py  test_agent_sse_steps.py  test_agent_trace_service.py  test_django_local_requests.py  test_eval_assertion_judge.py  test_eval_calibrate.py  test_eval_config.py  test_eval_dataset_quality.py  test_eval_grounding.py  test_eval_judge_coerce.py  test_eval_judge_model.py  test_eval_llm_judge.py  test_eval_metrics.py  test_eval_report.py  test_eval_schema.py  test_eval_sut.py  test_eval_threshold_sweep.py  test_graph_build_critic.py  test_graph_coordinator_node.py  test_graph_critic_e2e.py  test_graph_critic_node.py  test_graph_critic_routing.py  test_graph_finalize_node.py  test_graph_gap_routing.py  test_graph_knowledge_gap_node.py  test_graph_knowledge_node.py  test_graph_knowledge_permission.py  test_graph_knowledge_refetch.py  test_graph_node_error_handling.py  test_graph_routing.py  test_graph_runner_plan.py  test_graph_runner_sse.py  test_graph_stream_bridge.py  test_graph_task_node.py  test_graph_task_routing.py  test_identity.py  test_kb_permissions.py  test_knowledge_gap_api.py  test_knowledge_gap_service.py  (+8 more)
(+116 files in other folders)
